# rotorboard

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
qml/: DashboardGrid.qml  DashboardPage.qml  Main.qml  MetricUtils.js  MotorCard.qml  MotorCardSlot.qml  MotorGrid.qml  SettingsDialog.qml  Sparkline.qml  StatusBadge.qml  WidgetDialog.qml  WidgetPalette.qml
qml/widgets/: BatterySummaryCard.qml  ChartTile.qml  DashboardWidgetSlot.qml  MotorSummaryCard.qml  ValueTile.qml
samples/: session.csv
specs/: battery-summary-widget.md  chart-render-performance.md  dashboard-integration-tests.md  direct-edit-dashboard.md  input-method-settings.md
src/: main.cpp
src/app/: AppController.cpp  AppController.h
src/logging/: CsvTelemetryLogger.cpp  CsvTelemetryLogger.h
src/model/: BatteryTelemetry.cpp  BatteryTelemetry.h  MotorTelemetry.cpp  MotorTelemetry.h  WarningLevel.h
src/store/: BatteryTelemetryModel.cpp  BatteryTelemetryModel.h  DashboardLayoutModel.cpp  DashboardLayoutModel.h  MotorSampleRingBuffer.cpp  MotorSampleRingBuffer.h  MotorTelemetryModel.cpp  MotorTelemetryModel.h
src/telemetry/: CsvPlaybackSource.cpp  CsvPlaybackSource.h  DroneCanTelemetrySource.cpp  DroneCanTelemetrySource.h  FakeTelemetrySource.cpp  FakeTelemetrySource.h  IByteStreamTransport.h  ICanTransport.h  MavlinkParser.cpp  MavlinkParser.h  MavlinkSerialTelemetrySource.cpp  MavlinkSerialTelemetrySource.h  MavlinkTelemetrySource.cpp  MavlinkTelemetrySource.h  SerialByteStreamTransport.cpp  SerialByteStreamTransport.h  SlcanTransport.cpp  SlcanTransport.h  TcpTransport.cpp  TcpTransport.h  TelemetryManager.cpp  TelemetryManager.h  TelemetrySource.cpp  TelemetrySource.h  TelemetrySourceConfig.h  TelemetrySourceFactory.cpp  TelemetrySourceFactory.h  UdpTransport.cpp  UdpTransport.h
src/telemetry/dronecan/: DroneCanFrameParser.cpp  DroneCanFrameParser.h  DroneCanMotorCache.cpp  DroneCanMotorCache.h  HobbywingMessages.cpp  HobbywingMessages.h
src/warnings/: BatteryWarningEvaluator.cpp  BatteryWarningEvaluator.h  MotorWarningEvaluator.cpp  MotorWarningEvaluator.h
tests/: AppControllerTest.cpp  BatteryTelemetryModelTest.cpp  BatteryWarningEvaluatorTest.cpp  CsvTelemetryLoggerTest.cpp  DashboardIntegrationTest.cpp  DashboardLayoutModelTest.cpp  DroneCanTelemetrySourceTest.cpp  MavlinkSerialTelemetrySourceTest.cpp  MavlinkTelemetrySourceTest.cpp  MotorSampleRingBufferTest.cpp  MotorTelemetryModelTest.cpp  TcpTransportTest.cpp
